src/renderers/snapshots/scrut__renderers__pretty__tests__test_render_only_matches_surrounding_error=1.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

10  10  |   line match 10
    11  | - line NOT match
11      | + actual line
12  12  |   line match 12
...
16  16  |   line match 16
    17  | - line NOT match
17      | + actual line
18  18  |   line match 18
...


Summary: 0 file(s) with 1 test(s): 0 succeeded, 1 failed and 0 skipped

