src/renderers/snapshots/scrut__renderers__pretty__tests__test_render_only_matches_surrounding_error=2.snap
---
source: src/renderers/pretty.rs
expression: rendered
---
// =============================================================================
// @ Line 234
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

 9   9  |   line match 9
10  10  |   line match 10
11      | - line NOT match
    11  | + actual line
12  12  |   line match 12
13  13  |   line match 13
...
15  15  |   line match 15
16  16  |   line match 16
17      | - line NOT match
    17  | + actual line
18  18  |   line match 18
19  19  |   line match 19
...


Result: 0 document(s) with 1 testcase(s): 0 succeeded, 1 failed and 0 skipped
